Cambios en letras de favoritos

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -59,7 +59,7 @@
                 <img class="imagen" src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -73,19 +73,14 @@
                     reunirse una vez más para intentar deshacer sus acciones y restaurar el orden en el universo de una
                     vez
                     por todas, sin importar cuáles son las consecuencias... Cuarta y última entrega de la saga
-                    "Vengadores"
+                    "Vengadores".
                 </p>
 
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">8.4/10⭐</p>
-                <ul type="none"  class="linkfinal">
-                    <li class="generoprincipal">
-                        <a href="./genres.html" class="genero">GENERO:</a>
-                    </li>
-                    <li class="generoprincipal" >
-                        <a href="./detail-genres.html" class="genero">FAMILIA</a>
-                    </li>
-                </ul>
+
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Familia</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">22/4/2019</p>
             </article>
@@ -98,7 +93,7 @@
                 <img class="imagen" src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -115,12 +110,8 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">9.0/10⭐</p>
-                <h4>
-                    <a href="./genres.html">Género</a>
-                </h4>
-                <P>
-                    <a href="./detail-genres.html">Acción</a>
-                </P>
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">17/7/2008</p>
             </article>
@@ -132,7 +123,7 @@
                 <img class="imagen" src="./img/peli1.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -149,7 +140,7 @@
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">7.4/10⭐</p>
 
-                <h4 class="calificacion">Genero:</h4>
+                <h4 class="calificacion">Género:</h4>
                 <p class="puntuacion"><a href="./genres.html"> Ciencia Ficción</a></p>
 
                 <h4 class="estreno">Fecha de Estreno:</h4>
@@ -159,14 +150,15 @@
 
         <section class="sectionpadre">
             <article class="peliculaprincipal">
-                <h3 class="titulosdetalles">Spiderman: Far From Home</h3>
+                <h3 class="titulosdetalles">Spiderman:
+                Far From Home</h3>
                 <h4 class="duracion">
                     <a>Duración (2h 10m)</a>
                 </h4>
                 <img class="imagen" src="./img/spiderman.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -182,12 +174,8 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">7.5/10⭐</p>
-                <h4>
-                    <a href="./genres.html">Género</a>
-                </h4>
-                <p>
-                    <a href="./detail-genres.html">Familia</a>
-                </p>
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">2/6/2019</p>
             </article>
@@ -200,7 +188,7 @@
                 <img class="imagen" src="./img/venom-cartel-final-1537282420.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -219,12 +207,8 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">6.7⭐</p>
-                <h4>
-                    <a href="./genres.html">Género</a>
-                </h4>
-                <P>
-                    <a href="./detail-genres.html">Ciencia Ficción</a>
-                </P>
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
                 <h4 class="estreno">
                     <a>Fecha de Estreno:</a>
                 </h4>
@@ -235,7 +219,8 @@
         <section class="sectionpadre">
             <article class="peliculaprincipal">
                 <h3 class="titulosdetalles">
-                    Avengers:Infinity War
+                    Avengers:
+                    Infinity War
                 </h3>
                 <h4 class="duracion">
                     Duración (2h 29m)
@@ -244,7 +229,7 @@
                 <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -270,17 +255,12 @@
                 </h4>
                 <p class="puntuacion">8.4/10⭐</p>
 
-                <h4>
-                    <a href="./genres.html">Género</a>
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Familia</a></p>
+                <h4 class="estreno">
+                    Fecha de Estreno:
                 </h4>
-                <P>
-                    <a href="./detail-genres.html">Familia</a>
-                </P>
-                <h4>
-                    <h4 class="estreno">
-                        Fecha de Estreno:
-                    </h4>
-                    <p class="estreno">22/4/2019</p>
+                <p class="estreno">22/4/2019</p>
             </article>
         </section>
 
@@ -295,7 +275,7 @@
                 <img class="imagen" src="./img-series-nuevo/DeadPool.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -319,12 +299,8 @@
                 </h4>
                 <p class="puntuacion">8.0/10⭐</p>
 
-                <h4>
-                    <a href="./genres.html">Género</a>
-                </h4>
-                <P>
-                    <a href="./detail-genres.html">Acción</a>
-                </P>
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
                 <h4 class="estreno">
                     Fecha de Estreno:
                 </h4>
@@ -343,7 +319,7 @@
                 <img class="imagen" src="./img-series-nuevo/Iron Man.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -362,14 +338,8 @@
                 <h4 class="calificacion">
                     Calificación:
                 </h4>
-                <p class="puntuacion">7.9/10⭐</p>
-                <h4>
-                    <a href="./genres.html">Género</a>
-                </h4>
-                <P>
-                    <a href="./detail-genres.html">Acción</a>
-                </P>
-                <h4>
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
                     <h4 class="estreno">
                         <a>Fecha de Estreno:</a>
                     </h4>
@@ -390,7 +360,7 @@
                 <img class="imagen" src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -416,12 +386,8 @@
                     Calificación:
                 </h4>
                 <p class="puntuacion">6.1/10⭐</p>
-                <h4>
-                    <a href="./genres.html">Género</a>
-                </h4>
-                <P>
-                    <a href="./detail-genres.html">Ciencia Ficción</a>
-                </P>
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Ciencia Ficción</a></p>
                 <h4 class="estreno">
                     <a>Fecha de Estreno:</a>
                 </h4>
@@ -441,7 +407,7 @@
                 <img class="imagen" src="./img-series-nuevo/Spiderman 2.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -463,13 +429,8 @@
                     Calificación:
                 </h4>
                 <p class="puntuacion">7.3⭐</p>
-                <h4>
-                    <a href="./genres.html">Género</a>
-                </h4>
-                <P>
-                    <a href="./detail-genres.html">Familia</a>
-                </P>
-                <h4>
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Familia</a></p>
                     <h4 class="estreno">
                         <a>Fecha de Estreno:</a>
                     </h4>
@@ -480,15 +441,15 @@
     <footer>
         <section>
             <ul type="none" class="footer">
-                <li class="nombres"> 
+                <li class="nombres">
                     <h4>Roberto Arellano</h4>
                     <a class="gmail" href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
                 </li>
-                <li class="nombres" > 
+                <li class="nombres">
                     <h4>Martiniano Sanchez</h4>
                     <a class="gmail" href="mailto:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
                 </li>
-                <li class="nombres" > 
+                <li class="nombres">
                     <h4>Bonifacio Lastra</h4>
                     <a class="gmail" href="mailto:blastra@udesa.edu.ar">blastra@udesa.edu.ar</a>
                 </li>
