--- a/detail-series.html
+++ b/detail-series.html
@@ -58,7 +58,7 @@
                 <img class="imagen" src="./img-series/poster titans.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -74,12 +74,9 @@
 
                 <h4 class="calificacion">Calificación</h4>
                 <p class="puntuacion">7.6/10⭐</p>
-                <h4>
-                    <a href="./genres.html">Género:</a>
-                </h4>
-                <P>
-                    <a href="./detail-genres.html">Acción</a>
-                </P>
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Ciencia Ficción</a></p>
+
                 <h4 class="estreno">Fecha de Estreno</h4>
                 <p class="estreno">12/10/2018</p>
             </article>
@@ -91,7 +88,7 @@
                 <img class="imagen" src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -107,12 +104,8 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">8.6/10⭐</p>
-                <h4>
-                    <a href="./genres.html">Género:</a>
-                </h4>
-                <P>
-                    <a class="favorito" href="./detail-genres.html">Acción</a>
-                </P>
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">10/4/2015</p>
             </article>
@@ -124,7 +117,7 @@
                 <img class="imagen" src="./img-series/HBO-Watchmen-Poster-Full.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -138,12 +131,8 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">8.2/10⭐</p>
-                <h4>
-                    <a href="./genres.html">Género:</a>
-                </h4>
-                <P>
-                    <a href="./detail-genres.html">Ciencia Ficción</a>
-                </P>
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">20/10/2019</p>
             </article>
@@ -156,7 +145,7 @@
                 <img class="imagen" src="./img-series/news-00086600-gotham-season-2-poster.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -170,12 +159,8 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">7.8/10⭐</p>
-                <h4>
-                    <a href="./genres.html">Género:</a>
-                </h4>
-                <P>
-                    <a href="./detail-genres.html">Acción</a>
-                </P>
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">22/9/2014</p>
             </article>
@@ -187,7 +172,7 @@
                 <img class="imagen" src="./img-series/poster-loki.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -205,12 +190,8 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">8.4/10⭐</p>
-                <h4>
-                    <a href="./genres.html">Género</a>
-                </h4>
-                <P>
-                    <a href="./detail-genres.html">Familia</a>
-                </P>
+                <h4 class="calificacion">Género:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Familia</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">9/6/2021</p>
             </article>
@@ -219,15 +200,15 @@
     <footer>
         <section>
             <ul type="none" class="footer">
-                <li class="nombres"> 
+                <li class="nombres">
                     <h4>Roberto Arellano</h4>
                     <a class="gmail" href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
                 </li>
-                <li class="nombres" > 
+                <li class="nombres">
                     <h4>Martiniano Sanchez</h4>
                     <a class="gmail" href="mailto:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
                 </li>
-                <li class="nombres" > 
+                <li class="nombres">
                     <h4>Bonifacio Lastra</h4>
                     <a class="gmail" href="mailto:blastra@udesa.edu.ar">blastra@udesa.edu.ar</a>
                 </li>
