--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
             </div>
 
         </form>
-        <ul class="controles">
+        <ul type="none" class="controles">
             <li class="controleshijo">
             </li>
             <li>
                 <a href="./index.html" class="controleshijo">INICIO</a>
-
             </li>
             <li>
 
