--- a/detail-series.html
+++ b/detail-series.html
@@ -75,7 +75,7 @@
                 <h4 class="calificacion">Calificación</h4>
                 <p class="puntuacion">7.6/10⭐</p>
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Ciencia Ficción</a></p>
+                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Ciencia Ficción</a></p>
 
                 <h4 class="estreno">Fecha de Estreno</h4>
                 <p class="estreno">12/10/2018</p>
@@ -105,7 +105,7 @@
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">8.6/10⭐</p>
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
+                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">10/4/2015</p>
             </article>
@@ -132,7 +132,7 @@
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">8.2/10⭐</p>
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
+                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">20/10/2019</p>
             </article>
@@ -160,7 +160,7 @@
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">7.8/10⭐</p>
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
+                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">22/9/2014</p>
             </article>
@@ -191,7 +191,7 @@
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">8.4/10⭐</p>
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Familia</a></p>
+                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Familia</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">9/6/2021</p>
             </article>
