--- a/detail-movie.html
+++ b/detail-movie.html
@@ -80,7 +80,7 @@
                 <p class="puntuacion">8.4/10⭐</p>
 
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Familia</a></p>
+                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Familia</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">22/4/2019</p>
             </article>
@@ -111,7 +111,7 @@
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">9.0/10⭐</p>
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
+                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">17/7/2008</p>
             </article>
@@ -141,7 +141,7 @@
                 <p class="puntuacion">7.4/10⭐</p>
 
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Ciencia Ficción</a></p>
+                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Ciencia Ficción</a></p>
 
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">5/8/2021</p>
@@ -175,7 +175,7 @@
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">7.5/10⭐</p>
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
+                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">2/6/2019</p>
             </article>
@@ -208,7 +208,7 @@
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">6.7⭐</p>
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
+                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">
                     <a>Fecha de Estreno:</a>
                 </h4>
@@ -256,7 +256,7 @@
                 <p class="puntuacion">8.4/10⭐</p>
 
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Familia</a></p>
+                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Familia</a></p>
                 <h4 class="estreno">
                     Fecha de Estreno:
                 </h4>
@@ -300,7 +300,7 @@
                 <p class="puntuacion">8.0/10⭐</p>
 
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
+                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">
                     Fecha de Estreno:
                 </h4>
@@ -387,7 +387,7 @@
                 </h4>
                 <p class="puntuacion">6.1/10⭐</p>
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Ciencia Ficción</a></p>
+                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Ciencia Ficción</a></p>
                 <h4 class="estreno">
                     <a>Fecha de Estreno:</a>
                 </h4>
@@ -430,7 +430,7 @@
                 </h4>
                 <p class="puntuacion">7.3⭐</p>
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Familia</a></p>
+                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Familia</a></p>
                     <h4 class="estreno">
                         <a>Fecha de Estreno:</a>
                     </h4>
