--- a/index.html
+++ b/index.html
@@ -48,33 +48,32 @@
         </div>
         <section class="primerasection">
             <article>
-
-                <img class="imagen" src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
-
+                <a href="./detail-movie.html">  <img class="imagen" src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt=""> </a>
+                
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Avengers:EndGame</a>
                 </h3>
             </article>
             <article class="imagenpp">
-                <img class="imagen" src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/Batman_el_Caballero_de_la_Noche.png" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Batman: The Dark Knight</a>
                 </h3>
             </article>
             <article>
-                <img class="imagen" src="./img/peli1.jpg" alt="">
+                <a href="./detail-movie.html">  <img class="imagen" src="./img/peli1.jpg" alt="">  </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
                 </h3>
             </article>
             <article>
-                <img class="imagen" src="img/spiderman.png" alt="">
+                <a href="./detail-movie.html"> <img class="imagen" src="img/spiderman.png" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Spiderman: Far From Home</a>
                 </h3>
             </article>
             <article>
-                <img class="imagen" src="./img/venom-cartel-final-1537282420.jpg" alt="">
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/venom-cartel-final-1537282420.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Venom</a>
                 </h3>
