git add . que me pide la terminal

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -330,7 +330,7 @@
                     Calificación:
                 </h4>
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"> Acción</a></p>
+                <p class="puntuacion"><a class="colorLetraGenero" href="./genres.html"> Acción</a></p>
                     <h4 class="estreno">
                         <a>Fecha de Estreno:</a>
                     </h4>
