responsive tamaño tablet hecho y link en el apartado genero de la caja de datos

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -11,7 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&family=Commissioner:wght@100;500&family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&family=Commissioner:wght@100;500&family=Luckiest+Guy&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -74,7 +76,9 @@
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">8.4/10⭐</p>
 
-                <h4 class="calificacion">Género:</h4>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
                 <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Familia</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">22/4/2019</p>
@@ -106,7 +110,7 @@
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">9.0/10⭐</p>
                 <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
+                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">17/7/2008</p>
             </article>
@@ -135,8 +139,10 @@
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">7.4/10⭐</p>
 
-                <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Ciencia Ficción</a></p>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
+                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Ciencia Ficción</a></p>
 
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">5/8/2021</p>
@@ -146,7 +152,7 @@
         <section class="sectionpadre">
             <article class="peliculaprincipal">
                 <h3 class="titulosdetalles">Spiderman:
-                Far From Home</h3>
+                    Far From Home</h3>
                 <h4 class="duracion">
                     <a>Duración (2h 10m)</a>
                 </h4>
@@ -169,8 +175,10 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">7.5/10⭐</p>
-                <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
+                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">2/6/2019</p>
             </article>
@@ -202,8 +210,10 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">6.7⭐</p>
-                <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
+                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">
                     <a>Fecha de Estreno:</a>
                 </h4>
@@ -250,8 +260,10 @@
                 </h4>
                 <p class="puntuacion">8.4/10⭐</p>
 
-                <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Familia</a></p>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
+                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Familia</a></p>
                 <h4 class="estreno">
                     Fecha de Estreno:
                 </h4>
@@ -294,8 +306,10 @@
                 </h4>
                 <p class="puntuacion">8.0/10⭐</p>
 
-                <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
+                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">
                     Fecha de Estreno:
                 </h4>
@@ -333,12 +347,14 @@
                 <h4 class="calificacion">
                     Calificación:
                 </h4>
-                <h4 class="calificacion">Género:</h4>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
                 <p class="puntuacion"><a class="colorLetraGenero" href="./genres.html"> Acción</a></p>
-                    <h4 class="estreno">
-                        <a>Fecha de Estreno:</a>
-                    </h4>
-                    <p class="estreno">30/4/2008</p>
+                <h4 class="estreno">
+                    <a>Fecha de Estreno:</a>
+                </h4>
+                <p class="estreno">30/4/2008</p>
             </article>
         </section>
 
@@ -381,8 +397,10 @@
                     Calificación:
                 </h4>
                 <p class="puntuacion">6.1/10⭐</p>
-                <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Ciencia Ficción</a></p>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
+                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Ciencia Ficción</a></p>
                 <h4 class="estreno">
                     <a>Fecha de Estreno:</a>
                 </h4>
@@ -424,12 +442,14 @@
                     Calificación:
                 </h4>
                 <p class="puntuacion">7.3⭐</p>
-                <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Familia</a></p>
-                    <h4 class="estreno">
-                        <a>Fecha de Estreno:</a>
-                    </h4>
-                    <p class="estreno">1/7/2004</p>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
+                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Familia</a></p>
+                <h4 class="estreno">
+                    <a>Fecha de Estreno:</a>
+                </h4>
+                <p class="estreno">1/7/2004</p>
             </article>
         </section>
     </main>
